--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,16 +23,14 @@ android {
     testOptions {
         animationsDisabled = true
     }
+    buildToolsVersion '32.1.0 rc1'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // ANDROID
-    //noinspection GradleDependency
     implementation "androidx.appcompat:appcompat:$android_appcompat_version"
-    //noinspection GradleDependency
     implementation "androidx.constraintlayout:constraintlayout:$android_constraint_layout_version"
-    //noinspection GradleDependency
     implementation "com.google.android.material:material:$android_material_version"
     // GLIDE
     implementation "com.github.bumptech.glide:glide:$glide_version"
